src/App.css
/* @font-face {
  font-family: "Francois One";
  src: URL("FrancoisOne-Regular.ttf") format("truetype");
} */

body,
button {
  font-family: "Francois One", sans-serif;
  overflow: hidden;
}

a,
a:visited {
  text-decoration: none;
}

.welcome-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  background: rgb(255, 218, 185);
  background: linear-gradient(
    22deg,
    rgba(255, 218, 185, 1) 19%,
    rgba(248, 173, 157, 1) 50%,
    rgba(240, 128, 128, 1) 81%
  );
}

.welcome {
  color: #ffdab9;
}

.get-started-btn {
  display: flex;
  justify-content: center;
  background-color: #f08080;
  width: 100px;
  padding: 20px 80px 20px 80px;
  border: none;
  border-radius: 50%;
}

.get-started {
  color: #ffdab9;
  font-size: 20px;
}

.landing-container {
  display: flex;
  width: 100vw;
  height: 100vh;
  flex-direction: column;
  justify-content: center;
  align-content: space-between;
  padding: 0 15px 0 15px;
}

